--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ Flask==2.1.2
 Flask-Login==0.6.1
 Flask-Migrate==3.1.0
 Flask-SQLAlchemy==2.5.1
+Flask-Uploads==0.2.1
 Flask-WTF==1.0.1
 greenlet==1.1.2
 hyperlink==21.0.0
